# Doxoade

./: .coverage  .doxoade_bayes.json  .doxoade_bayes.pkl  .doxoaderc  .gitignore  .gitignore.bkp  0.txt  1.txt  CHANGELOG.md  Executando  Exemplo.txt  Pipeline1.txt  PipelineHelp.txt  PipelineTeste.txt  README.md  __main__.py  ajustado  arvore.txt  arvore.txt.bak  audit_vocab.py  bench_click.py  bench_click_opt.py  bench_click_pure.py  bench_click_vulcan.py  benchmark_vulcan_lib.py  build.bat  chief_dossier.json  clean_db.py  color_teste.py  colors.conf  debug_alfagold.py  debug_dnm.py  deploy_thinking_lab.py  doxoade.bat  doxoade.old.db  doxoade_report.json  fix_chronos.py  fix_core.py  impact_report.html  install-python.bat  (+39 more)
.dox_agent_workspace/: exp_0.py  exp_1.py  exp_2.py  exp_3.py  exp_4.py  exp_5.py  exp_6.py  exp_7.py  exp_8.py  exp_9.py  task_0.py  task_1.py  task_2.py  task_3.py  task_4.py  task_attempt_2.py
.dox_lab/: coletor_python.py  meu_crawler.py
.doxoade/: associative_memory.json  npp_bridge.json  npp_integration_script.py
.doxoade/deepcheck_snapshots/: doxoade_chronos.py.json  doxoade_commands_debug.py.json  doxoade_commands_deepcheck.py.json  doxoade_commands_deepcheck_utils.py.json  doxoade_commands_security.py.json  doxoade_commands_security_io.py.json  doxoade_commands_security_utils.py.json  doxoade_commands_telemetry.py.json  doxoade_probes_flow_runner.py.json  doxoade_tools_security_utils.py.json
.doxoade/vulcan/: __init__.py
.doxoade_cache/: check_cache.json
Canone_Test/: teste1.py  teste2.py
Notepadpp/: DOX.xml
alfagold/core/: adaptive_router.py  attention.py  math_lut.py  math_utils.py  moe_router.py  state_packet.py  tokenizer.py  transformer.py
alfagold/experts/: generator_expert.py  memory_expert.py  planning_expert.py  refinement_expert.py  reward_expert.py  syntax_expert.py
alfagold/hive/: hive_mind.py
alfagold/tools/: opt_guard.py
alfagold/training/: data_gen_mtl.py  train_mtl.py
assets/: loading.nxa  meu_logo.nxa  search_loading.nxa  uncompress_loading.nxa  wsl_deploy.nxa
check_test/: teste_erro.py
commands_test/: crash_bug.py  crash_sucesso.py  test_check_structural_risk.py  test_diagnose_git_context.py  test_diagnose_origin_delta.py  test_git_branch_pr.py  test_import_fixer.py  test_vulcan_assess.py  test_vulcan_autopilot.py  test_vulcan_bootstrap_runtime_alias.py  test_vulcan_cmd_forge_site_dirs.py  test_vulcan_cmd_import.py  test_vulcan_compiler_errors.py  test_vulcan_environment.py  test_vulcan_forge_future.py  test_vulcan_lib_forge.py  test_vulcan_meta_finder.py  test_vulcan_runtime_finder_recursion.py  test_vulcan_runtime_probe.py  test_vulcan_site_packages_dirs.py  teste_erro.py  teste_flow.py
docs/Internals/: vol17_semantic_archival.md
doxoade/: .dox_marker  .gitignore  __init__.py  __main__.py  _version.py  chronos.py  cli.py  colors.conf  database.py  dnm.py  doxoade.py  fixer.py  learning.py  rescue.py  shared_tools.py  tracer.py
doxoade.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
doxoade/API/: __init__.py  __main__.py  orn_bridge.py
doxoade/commands/: __init__.py  _vulcan_embedded_template.py  agent.py  (+99 more)
plugins/: __main__.py
pytest_temp_dir/: test_check_finds_syntax_errorcurrent  test_check_finds_unresolved_imcurrent  test_check_finds_unused_importcurrent  test_check_passes_on_clean_codcurrent
regression_tests/: canon.toml
telemetry/: orn_bridge.jsonl
tests/: conftest.py  dojo_fix.py  dojo_ultimate.py  matrix_demo.py  test_canonize_command.py  test_check_command.py  test_check_filters.py  test_classification_regression.py  test_clean_command.py  test_core_invocation.py  test_deepcheck_command.py  test_doctor_command.py  test_doctor_logic.py  test_fix_logic.py  test_guicheck_command.py  test_health_command.py  test_init_command.py  test_optimize_command.py  test_rebuild_command.py  test_regression_logic.py  test_run_logic.py  test_save_command.py  test_utils_commands.py
(+444 files in other folders)
