[project]
name = "doxoade"
version = "55.0"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4",
    "chardet",
    "click",
    "colorama",
    "coverage",
    "cssutils",
    "esprima",
    "jsondiff",
    "lxml",
    "packaging",
    "pandas<2.3",
    "pyflakes",
    "pytest",
    "pytest-cov",
    "pytest-cov",
    "pyyaml",
    "radon",
    "setuptools",
    "stdlib_list",
    "toml",
	"rich"
]

[build-system]
requires = [ "setuptools>=61.0",]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dashboard = ["pandas<2.3",]

[project.scripts]
doxoade = 'doxoade.__main__:main'
#doxoade = "doxoade.doxoade:cli"

[tool.doxoade]
source_dir = "."
keep = [ "coverage", "jsondiff", "pytest", "pyyaml", "radon", "setuptools",]
ignore = [ "commands_test/", "tests/", "regression_tests/", "Canone_Test/", "Vers/", "venv/", "doxoade.egg-info/", ".pytest_cache/", "pytest_temp_dir/", "tmp/", ".dox_agent_workspace/", "dox_lab/",]

[tool.setuptools]
packages = [ "doxoade",]

[tool.pytest.ini_options]
addopts = "-v"
filterwarnings = [ "ignore::DeprecationWarning",]
norecursedirs = "Vers doxoade.egg-info .pytest_cache pytest_temp_dir tmp regression_tests"
