# pyproject.toml
[project]
name = "doxoade"
version = "75.0"
description = "olDox222 Advanced Development Environment - Chief Gold Edition"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.0",
    "colorama>=0.4.6",
    "rich>=13.0.0",
    "packaging>=23.0",
    "pathspec>=0.11.0",
    "toml>=0.10.2",
    "pyflakes>=3.1.0",
    "radon>=6.0.0",
    "jsondiff>=2.0.0",
    "beautifulsoup4>=4.12.0",
    "cssutils>=2.9.0",
    "esprima>=4.0.1",
    "numpy>=2.0.0",
    "psutil>=5.9.0",
    "pytest>=7.4.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
legacy = ["pandas<2.3", "lxml", "pyyaml"]

[project.scripts]
doxoade = 'doxoade.__main__:main'
#doxoade = "doxoade.doxoade:cli"

[tool.doxoade]
source_dir = "."
keep = [ "coverage", "jsondiff", "pytest", "pyyaml", "radon", "setuptools",]
ignore = [ "commands_test/", "tests/", "regression_tests/", "Canone_Test/", "Vers/", "venv/", "doxoade.egg-info/", ".pytest_cache/", "pytest_temp_dir/", "tmp/", ".dox_agent_workspace/", "dox_lab/","tests/old", "doxoade/diagnostic",]
exclude_categories = ["STYLE", "DOCS"]

[tool.setuptools]
packages = ["doxoade", "doxoade.commands", "doxoade.tools", "doxoade.probes", "doxoade.diagnostic"]

[tool.pytest.ini_options]
addopts = "-v"
filterwarnings = [ "ignore::DeprecationWarning",]
norecursedirs = "Vers doxoade.egg-info .pytest_cache pytest_temp_dir tmp regression_tests"
